--- a/m3-w2d5-validation-exercises-pair/Validation.Web/Validation.Web.csproj
+++ b/m3-w2d5-validation-exercises-pair/Validation.Web/Validation.Web.csproj
@@ -128,6 +128,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Users\Index.cshtml" />
     <Content Include="Views\Users\NewUser.cshtml" />
+    <Content Include="Views\Users\RegistrationConfirmation.cshtml" />
+    <Content Include="Views\Users\LoginConfirmation.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
